Updated to fit more with email campaingn thingy

--- a/index.html
+++ b/index.html
@@ -2,48 +2,53 @@
 <html lang="en">
 
 <head>
-  <title>Justin's Car Page</title>
+  <title>Justin Email Campaign</title>
 </head>
 
-<body style="font-family: Arial; background-color: #f4f4f4; margin: 30px;">
+<body style="margin:0; padding:0; background-color:#eeeeee; font-family: Arial;">
 
-  <div style="background-color: white; padding: 20px; border-radius: 8px; max-width: 700px;">
+  <!-- email wrapper -->
+  <div style="max-width:600px; margin:20px auto; background-color:white; padding:20px;">
 
-    <h1 style="color: darkblue;">
-      Justin likes cars
-    </h1>
+    <!-- heading section -->
+    <div style="text-align:center;">
+      <h1 style="color:darkblue; margin-bottom:10px;">
+        Justin's Car Update
+      </h1>
+      <h3 style="color:gray; margin-top:0;">
+        A random email about cars
+      </h3>
+    </div>
 
-    <!-- car image -->
-    <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?auto=format&fit=crop&w=900&q=60"
-         alt="cool car"
-         style="width: 100%; border-radius: 6px;">
+    <!-- image section -->
+    <div style="text-align:center;">
+      <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?auto=format&fit=crop&w=900&q=60"
+           alt="car image"
+           style="width:100%; border-radius:6px;">
+    </div>
 
-    <p style="line-height: 1.5;">
-      So yeah I’ve always liked cars but I went to the Peterson museme
-      recently and it kinda reignited everything again. Seeing all those
-      builds in person was crazy. Some of them didnt even look real.
-    </p>
+    <!-- body text -->
+    <div>
+      <p style="line-height:1.5;">
+        So yeah I went to the Peterson museme recently and it kinda
+        reignited my love for cars again. Seeing all those builds in
+        person was wild honestly. Some of them didnt even look real.
+      </p>
 
-    <p style="line-height: 1.5;">
-      Ever since then I been watching random vids and looking stuff up
-      about engines and builds and all that. I dont know everything yet
-      but its fun learning. I probly spend too much time thinking about
-      cars now honestly.
-    </p>
+      <p style="line-height:1.5;">
+        Ever since then I been watching random vids and learning more
+        stuff about engines and builds. I probly dont understand half
+        of it yet but its fun. I think about cars way more now.
+      </p>
 
-    <p style="line-height: 1.5;">
-      Hopefully one day I can get a job somewhere in that world. Even if
-      its not building them, just being around cars would be sick. For now
-      I’m just enjoying the hobby and seeing where it goes.
-    </p>
-
-    <a href="https://www.petersen.org/" target="_blank"
-       style="color: purple;">
-      Check out the Peterson Museum
-    </a>
+      <p style="line-height:1.5;">
+        Hopefully one day I land a job around cars somehow. Even just
+        being near that world would be sick. For now I’m just enjoying
+        learning and staying into it.
+      </p>
+    </div>
 
   </div>
 
 </body>
-
 </html>
